--- a/src/components/PaymentType/PaymentType.scss
+++ b/src/components/PaymentType/PaymentType.scss
@@ -2,7 +2,9 @@
 
 .payment_type{
     @include backgroundImage("../../assets/payment-type-back.png", 405px); // Custom height for .welcome
-
+    overflow: hidden;
+    height: 405px;
+    position: relative;
     
     
     &_container{
@@ -16,6 +18,7 @@
         
     }
     &_left{
+        width: 50%;
         height: 100%;
         display: flex;
         flex-direction: column;
@@ -47,11 +50,55 @@
         display: flex;
         align-items: flex-end;
         height: 100%; 
+        position: absolute;
+        width:80%;
+
         
-        img {
-            margin-bottom: 0; 
+        
+        .line{
+            &_front{
+                position: absolute;
+                top:40%;
+                right: 0;
+                z-index: 10;
+            }
+            &_back{
+                position:absolute;
+                top:24%;
+                right: 0;
+                z-index: 0;
+
+            }
         }
+        .bank_card{
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            z-index: 5;
+        }
+        // .bank_card_2{
+        //     position:absolute;
+        //     bottom: -25%;
+        //     left: 10%;
+            
+        //     z-index: 5;
+        //     width: 300px;
+        // }   
+        .payment_list{
+            position: absolute;
+            left: 60%;
+            bottom: 15%;
+            z-index: 0;
+        }
+        .notification{
+            position: absolute;
+            top: 10%;
+            right:    10%;
+            z-index: 11;
+        }
+        
     }
+    
     
     
 }
