--- a/src/components/Application/Application.scss
+++ b/src/components/Application/Application.scss
@@ -1,7 +1,8 @@
 @import "../../styles/mixins.scss";
 
 .application{
-    @include backgroundImage("../../assets/payment-type-back.png", 725px); 
+    @include backgroundImage("../../assets/application-back.png", 725px,100%);
+    width: 100%; 
     height: 725px; 
     display: flex;
     padding-top: 100px;
@@ -13,7 +14,7 @@
 
     &_left{
         position: absolute;
-        left: 10%;
+        left: 5%;
         top:40%;
         animation: bouncingLeft 4s linear infinite;
     }
@@ -30,7 +31,7 @@
     }
     &_right{
         position: absolute;
-        right: 10%;
+        right: 5%;
         top:60%;
         animation: bouncingRight 5s linear infinite ;
     }
@@ -49,6 +50,7 @@
         font-size: 64px;
         font-weight: 600;
         color:white;
+        letter-spacing: -2px;
     }
     h4{
         font-size: 18px;
