--- a/src/components/PaymentEvolution/PaymentEvolution.scss
+++ b/src/components/PaymentEvolution/PaymentEvolution.scss
@@ -1,123 +1,155 @@
-@import "../../styles/mixins.scss";
+@import "../../styles/mixins.scss"; // Updated import statement
 
-.payment{
-    margin-block: 100px;
-    
-}
-.payment_evolution{
-    margin-block:100px;
+.evolution{
+    display: flex;
+    justify-content: center;
     align-items: center;
+    text-align: center;
+    width: 100%;
+    overflow: hidden;
 
-
-    h2{
-        text-align: center;
-        font-weight: 600;
-        font-size: 64px;
-        letter-spacing: -3px;
+    &__container{
+        margin-block: 100px;
+        h2 {
+            font-size: 64px; // Заголовок
+            margin-bottom: 60px;
+            font-weight: 600;
+            letter-spacing: -2px;
+          }
     }
     
-
-
-    &_info{
+    
+    &__steps-container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 100%;
-        padding-block:50px;
-        
-        .info-block{
-            margin:50px;
-        }
-        h3{
-            font-size: 44px;
-            margin-bottom: 30px;
-        }
-        p{
-            margin-bottom: 10px;
-            font-size: 24px;
-        }
-        h4{
-            font-size: 34px;
-            margin-top: 40px;
+        max-width: 1000px; 
+        margin: 0 auto; 
+        margin-top: 60px;// Центрируем контейнер и добавляем отступ сверху
+        flex-direction: column;
+        gap: 40px;
+    }
+    &__steps-track{
+        position: relative;
+        display: flex;
+        flex-direction: row-reverse;
+        transition: transform 0.5s ease; // Плавный переход при смене слайдов
+        gap: 50px;
+        padding-right: 240%;
+    }
+    
+    .step-first{ 
+        justify-content: flex-start;
+        padding-top: 0;
+        position: relative;
+
+
+        img{
+            width: 100%;
+            position: relative;
+            left: -10px;
             margin-bottom: 20px;
         }
-        ul{
-            display: flex;
-            flex-direction: row;
-            gap: 10px;
-            flex-wrap: wrap;
-        }
-        ul li{
-            border-radius: 12px;
-            font-size: 24px;
-            padding: 12px 16px;
-            background: var(--back-grey);
+    }
+    &__step{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+        width: 350px;
+        border: 0.75px solid #E7E9EA;
+        opacity: 0.7;
+        border-radius: 30px;
+        padding: 20px;
 
+        p{
+            font-size: 26px;
+            font-weight: 400;
+        }
+
+        img{
+            width: 100%;
         }
     }
+    &__step--active{
+        transform: scale(1.3); // Текущий шаг увеличивается
+        transition: transform 0.5s ease; 
+        margin: 30px;// Плавный переход при активации
+        background-color: var(--back-grey); 
+        opacity: 1;
+        
+    }
+    &__image-container{
+        display: flex;
+        justify-content: center;
+    }
+    &__step-details{
+        width: 50%;
+        h1{
+            font-size: 36px;
+            font-weight: 500;
+            margin: 0;
+        }
+        p{
+            height: 90px;
+            font-size: 18px;
+            margin-block: 30px;
+        }
+        }
 
+        &__indicators {
+            display: flex;
+            justify-content: center;
+            gap: 14px; // Spacing between the indicators
+            margin-top: 20px; // Space between indicators and step details
+          }
+        
+          &__indicator {
+            width: 32px;
+            height: 8px;
+            background-color: #ccc; // Default grey color for inactive steps
+            border-radius: 100px;
+            transition: background-color 0.3s ease;
+        
+            &--active {
+              background-color: #007bff; // Blue color for the active step
+            }
+          }   
+    .controls {
+        
+        margin-top: 20px;
+        display: flex;
+        gap: 10px; // Разделение кнопок
+        justify-content: center;
+        .next{
+          background-color: #007bff;
+          color: white;
+        }
+        .next:hover{
+          background-color: #0056b3; // Темнее при наведении
+        }
+        .prev{
+          background-color: var(--back-grey);
+          color:  #1D1D1F;
+  
+        }
+        .prev:hover{
+          opacity: 0.8; // Темнее при наведении
+        }
+        button {
+          padding: 10px 20px;
+          border: none;
+          border-radius: 16px;
+          cursor: pointer;
+          transition: background-color 0.3s;
+  
+          &:disabled {
+            background-color: #cccccc; // Gray background for disabled state
+            cursor: not-allowed; // Change cursor to indicate it's not clickable
+            opacity: 0.6; // Lower opacity for disabled state
+          } 
+        }
+      }
 
-.payment_evolution_card{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-items: center;
-    transition: transform 0.3s ease; 
-    gap:15px;
-}
-.slick-track{
-    display: flex !important;
-    gap:10px !important;
-    text-align: center !important;
-}
-.prev-btn {
-    left: -5% ;
-    
-}
-.next-btn{
-    right: -5% ;
-    
-}
-.slide-btn{
-    top:0;
-    border-radius: 30px;
-    display: flex;
-    justify-content: center !important;
-    align-items: center ;
-    width: 44px ;
-    height: 260px ;
-    background: #F5F5F7;
-    position: absolute;
-    
-}
-.terminalAlaqan{
-    position: relative;
-    top:-15px ;
-}
-
-.imageBlock{
-    width: 100%;
-    height: 260px;
-    background: #F5F5F7;
-    border-radius: 30px;
-    display: flex;
-    align-items: center; 
-    justify-content: center; 
-
-    
-}
-h3{
-    font-weight: 600;
-    font-size: 36px;
-    box-sizing:content-box;
-}
-span{
-    font-size: 16px;
-    color:var(--grey);
-}
-
-.selectedType{
-    background: #F63636;
-    
-}
-.selectedTypeGreen{
-    background: #1ED768;
-}
 }
