--- a/src/index.scss
+++ b/src/index.scss
@@ -40,9 +40,11 @@ img{
 }
 
 .wrapper{
-    max-width: 1440px;
+    // max-width: 1500px;
+    width: 100%;
     padding-inline: 5rem;
     margin-inline: auto;
+
 
     @include respond(tab-land){
         padding-inline: 1.5rem;
@@ -68,7 +70,7 @@ img{
 }
 
 .section_wrapper{
-    max-width: 1280px;
+    max-width: 90%;
     padding-inline: 5rem;
     margin-inline: auto;
     margin-top: 30px;
