--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -17,10 +17,11 @@
     }//1200px
 }
 
-@mixin backgroundImage($image-url, $height) {
+@mixin backgroundImage($image-url, $height,$width) {
     background-image: url($image-url);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     height: $height;
+    width: $width;
 }
